test(backend): enhance test coverage and improve exception handling